--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
         restart: always
         # Server Pro users:
         # image: quay.io/sharelatex/sharelatex-pro
-        image: sharelatex/sharelatex:tlmgr-full
+        # image: sharelatex/sharelatex:latest
+        image: sharelatex/sharelatex:full
         container_name: sharelatex
         depends_on:
             mongo:
